<resources>
    <string name="app_name">desafio-android-digital-house</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate Password</string>
    <string name="tony_roma_s">Tony Roma\'s</string>
    <string name="pratos_principais">Pratos principais</string>
    <string name="salada_com_molho_gengibre">Salada com molho Gengibre</string>
    <string name="text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis</string>
</resources>