<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundColor="#fff"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLogin"/>

    <RelativeLayout
        android:id="@+id/layoutOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp" >

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@+id/txtOr"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/txtOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/or"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/txtOr"
            android:background="#c0c0c0" />
    </RelativeLayout>


    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOr"/>




</androidx.constraintlayout.widget.ConstraintLayout>