<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxtNameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorTextPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailRegister"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNameRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorTextPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordRegister"
        android:layout_width="match_parent"
        android:fontFamily="@font/roboto"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundColor="#fff"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxtPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorTextPrimary"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtRepeatePasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeate_password"
        android:fontFamily="@font/roboto"
        app:boxBackgroundColor="#fff"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTxtRepeatePasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textColor="@color/colorTextPrimary"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegisterRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="20dp"

        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        android:backgroundTint="@color/colorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>